feat(web): prevent content shifting

--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -1,3 +1,9 @@
 @tailwind base;
+
+body {
+  overflow-x: hidden;
+  margin-right: calc(-1 * (100vw - 100%));
+}
+
 @tailwind components;
 @tailwind utilities;
